[package]
name = "tui-tools"
description = "A collection of tools for building terminal user interfaces."
version = "0.1.0"
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enable-ansi-support = "0.2.1"