[package]
name = "tui-tools"
description = "A collection of tools for building terminal user interfaces."
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/0bject-0bject/tui-tools"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enable-ansi-support = "0.2.1"